minor cleanup, there's too much to fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,8 +23,8 @@ body {
 }
 
 .form-container {
-    height: 60%;
-    width: 25%;
+    height: 550px;
+    width: 375px;
     background-color: var(--two-color);
     display: flex;
     justify-content: center;
@@ -35,16 +35,19 @@ body {
 
 .form-title {
     text-decoration: underline;
+    width: 100%;
+    text-align: center;
 }
 
 .form-prompt {
+    width: 100%;
     margin: 0;
+    text-align: center;
 }
 
 .form-input {
     width: 80%;
     padding: 12px 20px;
-    margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -54,6 +57,7 @@ body {
 button {
     background-color: var(--three-color);
     border: none;
+    border-radius: 6px;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -72,7 +76,7 @@ button:hover {
     height: 0;
 }
 
-.board-container {
+.page-container {
     position: absolute;
     top: 0px;
     bottom: 0px;
@@ -83,6 +87,16 @@ button:hover {
     justify-content: center;
     height: 100%;
     width: 100%;
+    background-color: var(--one-color);
+    flex-wrap: wrap;
+}
+
+.board-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 432px;
     background-color: var(--one-color);
     flex-wrap: wrap;
 }
@@ -117,35 +131,31 @@ button:hover {
 }
 
 .board-controls {
-    margin: 0 50%;
+    margin-top: 16px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .board-control-button {
-    margin: 5% 50%;
+    width: 100%;
 }
 
 .player-container {
     background-color: var(--three-color);
-    height: 50%;
-    width: 25%;
+    height: 20%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-content: center;
-    border: 2px solid #744d21;
+    border: 6px solid transparent;
     border-radius: 6px;
 }
 
 .player-1-container {
-    margin-right: 10px;
+    margin-top: 16px;
     /* justify-self: flex-start; */
-}
-
-.player-2-containter {
-    margin-left: 10px;
-    /* justify-self: flex-end; */
 }
 
 .player-container h2 {
@@ -162,15 +172,18 @@ button:hover {
 .active-player {
     color: #361f06;
     text-decoration: underline;
+    border: 6px solid #361f06;
+    border-radius: 6px;
 }
 
 .chess-board {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    /* height: 400px;
-    width: 400px; */
+    height: 432px;
+    width: 432px;
     align-self: center;
     justify-self: center;
+    margin: 16px;
 }
 .board-square {
     border: 2px solid #744d21;
